--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<article class="post">
+<article class="card">
   <h1>{{ page.title }}</h1>
   <p class="meta">{{ page.date | date: "%B %d, %Y" }}</p>
   <div class="post-body">
