--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-nav">
   <div class="container nav-inner">
     <a class="brand" href="{{ '/' | relative_url }}">
-      <img src="{{ '/assets/img/logo.webp' | relative_url }}" alt="Street Light logo" class="nav-logo">
+      <img src="{{ '/assets/img/favicon.webp' | relative_url }}" alt="Street Light logo" class="nav-logo">
       <span class="brand-text">Street Light Consulting</span>
     </a>
     <nav aria-label="primary">
