--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ p,li,label {color: var(--muted-color); }
 article { background-color:black;}
 
 
-h1, h2, h3 { font-family: "Montserrat", sans-serif; color: var(--color); }
+h1, h2, h3 { font-family: "Montserrat", sans-serif; color:var(--primary);}
 
 a { color: var(--primary); }
 a:hover { color: var(--secondary); }
