--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ article { background-color:var(--background-color);}
 
 
 h1 { font-family: "Montserrat", sans-serif; color:var(--muted-color);}
-h2, h3 { font-family: "Montserrat", sans-serif; color:var(--primary);}
+h2, h3, h4 { font-family: "Montserrat", sans-serif; color:var(--primary);}
 
 a { color: var(--primary); }
 a:hover { color: var(--secondary); }
