--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -381,3 +381,19 @@ table {
   cursor: pointer;
   border-color:black;
 }
+
+.post-author {
+  font-size: 0.95rem;
+  color: #444;
+  margin-bottom: 1rem;
+}
+.post-author a {
+  text-decoration: none;
+  color: #2a5d84;
+  font-weight: 600;
+}
+.author-tagline {
+  color: #777;
+  font-style: italic;
+  margin-left: 0.25rem;
+}
