--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,7 +5,7 @@ layout: default
   <div class="hero-inner">
     <img src="{{ '/assets/img/logo.webp' | relative_url }}" alt="Street Light Consulting logo" class="hero-logo" loading="eager">
     <h1>Street Light Consulting</h1>
-    <p class="tagline">Guided by Faith. Grounded in Stewardship</p>
+    <p class="tagline">Guided by Faith. Grounded in Stewardship.</p>
     <a href="{{ '/services/' | relative_url }}" class="btn bronze">Explore Services</a>
   </div>
 </section>
