--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,7 @@
         <li><a href="{{ '/' | relative_url }}">Home</a></li>
         <li><a href="{{ '/services/' | relative_url }}">Services</a></li>
         <li><a href="{{ '/insights/' | relative_url }}">Insights</a></li>
+        <li><a href="https://news.streetlight.consulting">Newsletter</a></li>
         <li><a href="{{ '/about/' | relative_url }}">About</a></li>
         <li><a href="{{ '/contact/' | relative_url }}">Contact</a></li>
       </ul>
